--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="text-box">
+<link rel="stylesheet" href="style.css">
+<div class="text-box">
   <h3>Пофарбуйте мене в рожевий колір (color:pink).</h3>
   <p>Даний елемент має залишитись неоформленим.</p>
   <p id="greycol">Пофарбуйте мене в сірий колір (color:grey).</p>
@@ -16,5 +9,3 @@
   <p>Пофарбуйте мене в зелений колір (color:green).</p>
   <p class="yellow">Пофарбуйте мене в жовтий колір (color:yellow).</p>
 </div>
-</body>
-</html>
